--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,2 +1,7 @@
+all: num2 test
+
 num2: num2.cpp
-	clang++ -Wall -g num2.cpp -o num2
+	clang++ -o num2 num2.cpp
+
+test: test.cpp
+	clang++ -o test test.cpp
