Cleaned up folder

--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,7 +1,7 @@
-all: num2 test
+all: num1 num2
+
+num1: num1.cpp
+	clang++ -o num1 num1.cpp
 
 num2: num2.cpp
 	clang++ -o num2 num2.cpp
-
-test: test.cpp
-	clang++ -o test test.cpp
