--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,7 +1,10 @@
-all: num1 num2
+all: num1 num2 num3
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
 
 num2: num2.cpp
 	clang++ -o num2 num2.cpp
+
+num3: num3.cpp
+	clang++ -o num3 num3.cpp
