--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3
+all: num1 num2 num3 num4
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -8,3 +8,6 @@ num2: num2.cpp
 
 num3: num3.cpp
 	clang++ -o num3 num3.cpp
+
+num4: num4.cpp
+	clang++ -o num4 num4.cpp
