--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4
+all: num1 num2 num3 num4 num5
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -11,3 +11,6 @@ num3: num3.cpp
 
 num4: num4.cpp
 	clang++ -o num4 num4.cpp
+
+num5: num5.cpp
+	clang++ -o num5 num5.cpp
