--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4 num5
+all: num1 num2 num3 num4 num5 num6
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -14,3 +14,6 @@ num4: num4.cpp
 
 num5: num5.cpp
 	clang++ -o num5 num5.cpp
+
+num6: num6.cpp
+	clang++ -o num6 num6.cpp
