--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4 num5 num6 test
+all: num1 num2 num3 num4 num5 num6 num7 test
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -17,6 +17,9 @@ num5: num5.cpp
 
 num6: num6.cpp
 	clang++ -o num6 num6.cpp
+
+num7: num7.cpp
+	clang++ -o num7 num7.cpp
 
 test: test.cpp
 	clang++ -o test test.cpp
