Fix prime logic

--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4 num5 num6 num7 num8 num9 test
+all: num1 num2 num3 num4 num5 num6 num7 num8 num9 num10 test
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -26,6 +26,9 @@ num8: num8.cpp
 
 num9: num9.cpp
 	clang++ -o num9 num9.cpp
+
+num10: num10.cpp
+	clang++ -o num10 num10.cpp
 
 test: test.cpp
 	clang++ -o test test.cpp
