--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4 num5 num6 num7 num8 num9 num10 test2 test
+all: num1 num2 num3 num4 num5 num6 num7 num8 num9 num10 num11 test2 test
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -29,6 +29,9 @@ num9: num9.cpp
 
 num10: num10.cpp
 	clang++ -o num10 num10.cpp
+
+num11: num11.cpp
+	clang++ -o num11 num11.cpp
 
 test: test.cpp
 	clang++ -o test test.cpp
