--- a/ch4/Exercises/Makefile
+++ b/ch4/Exercises/Makefile
@@ -1,4 +1,4 @@
-all: num1 num2 num3 num4 num5 num6 num7 num8 num9 num10 num11 num12 num13 test2 test
+all: num1 num2 num3 num4 num5 num6 num7 num8 num9 num10 num11 num12 num13 num14 test2 test
 
 num1: num1.cpp
 	clang++ -o num1 num1.cpp
@@ -38,6 +38,9 @@ num12: num12.cpp
 
 num13: num13.cpp
 	clang++ -o num13 num13.cpp
+
+num14: num14.cpp
+	clang++ -o num14 num14.cpp
 
 test: test.cpp
 	clang++ -o test test.cpp
